# sdwan-python-rest-api

./: .gitignore  README.md  generate_basic_templates.sh  login.py  pyproject.toml  requirements.txt  sdwan-test.py  sdwancli.py  setup.py
sdwancli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
vmanage/: Untitled-1.py  authenticate.py  bfd.py  constants.py  control.py  device.py  ipsec.py  omp.py  sdwancli.py  sla.py  template.py  utils.py
vmanage/api/: authenticate.py  vpn.py
vmanage/cli/: bfd.py  control.py  device.py  ipsec.py  omp.py  sla.py  template.py
