[tool.poetry]
name = "sdwan"
version = "0.1.0"
description = ""
authors = ["kimdoanh89 <kimdoanh89@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tabulate = "^0.8.7"
pyyaml = "^5.3.1"
urllib3 = "^1.25.10"
rich = "^6.0.0"
requests = "^2.24.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
bpython = "^0.19"
pdbpp = "^0.10.2"
flake8 = "^3.8.3"
mypy = "^0.782"
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
